--- a/startup.html
+++ b/startup.html
@@ -18,12 +18,12 @@
     <![endif]-->
 
 </head>
-<body data-spy="scroll" data-target="#navbar-scroll">
+<body data-spy="scroll" data-offset="50" data-target="#navbar-scroll">
 
 	<nav class="navbar navbar-fixed-top navbar-inverse" id="navbar-scroll">
 		<div class="container">
 			<div class="navbar-header">		
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" id="navbar-collapsed" data-target="#navbar-collapse">
 					<span class="sr-only">Toggle Navigation</span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -34,17 +34,17 @@
 			
 			<div class="collapse navbar-collapse" id="navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li class="active"><a href="#h">Home</a></li>
-					<li><a href="#why-us">About</a></li>
-					<li><a href="#team">Our Team</a></li>
-					<li><a href="#signup">Contact</a></li>
+					<li class="active"><a href="#h" class="scroll-link" data-id="h">Home</a></li>
+					<li><a href="#why-us" class="scroll-link" data-id="why-us">About</a></li>
+					<li><a href="#team" class="scroll-link" data-id="team">Our Team</a></li>
+					<li><a href="#signup" class="scroll-link" data-id="signup">Contact</a></li>
 				</ul>
 			</div>
 		</div>
 	
 	</nav>
 	
-	<div class="cover fade-in" id="h">
+	<div id="h" class="cover">
 		<div class="cover-text">
 			<h1>You probably haven&rsquo;t heard of us.</h1>
 			<p class="lead">We're that "cool" vegan uncle who doesn't have kids and somehow makes a living repairing antique polaroid cameras, while drinking a $38 bottle of artisanal cold-brew</p>
@@ -86,7 +86,7 @@
 		</div>
 	</section>
 	
-	<section id="team" class="fade-in">
+	<section id="team">
 		<div class="container">
 			<h2>Meet out Team</h2>
 			<div class="row">
@@ -142,6 +142,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+    <script src="js/script.js" type="text/javascript"></script>
+    
 </body>
 </html>
 
